# csc299-project

./: README.md  SUMMARY.md
final/: README.md  SUMMARY.md  main.py  pyproject.toml  video.txt
final/agents/: ai.py  ai_agent.py  assistant.py  planner.py
final/chat/: interface.py
final/data/: notes.json  tasks.json
final/pkms/: __init__.py  assistant.py  documents.py  search.py  storage.py
final/tasks/: __init__.py  manager.py  storage.py  tasks.json
tasks1/: README.md  task_cli.py  tasks.json
tasks2/: README.md  task_cli.py  tasks.json
tasks3/: pyproject.toml
tasks3/src/tasks3/: __init__.py
tasks3/tests/: test_inc.py  test_more.py
tasks4/: pyproject.toml
tasks4/src/tasks4/: __init__.py
tasks5/: README.md  requirements.txt  tasks.py
tasks5/tests/: test_tasks.py
